--- a/datasource-download/pom.xml
+++ b/datasource-download/pom.xml
@@ -2,11 +2,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>ccp-datasource</artifactId>
+		<artifactId>datasource</artifactId>
 		<groupId>edu.ucdenver.ccp</groupId>
-		<version>0.1-SNAPSHOT</version>
+		<version>0.2-SNAPSHOT</version>
 	</parent>
-	<artifactId>ccp-datasource-download</artifactId>
+	<artifactId>datasource-download</artifactId>
 
 	<dependencies>
 		<dependency>
@@ -15,7 +15,7 @@
 		</dependency>
 		<dependency>
 			<groupId>edu.ucdenver.ccp</groupId>
-			<artifactId>ccp-datasource-identifiers</artifactId>
+			<artifactId>datasource-identifiers</artifactId>
 			<version>${version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
