--- a/datasource-fileparsers/pom.xml
+++ b/datasource-fileparsers/pom.xml
@@ -1,11 +1,56 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>datasource</artifactId>
-    <groupId>edu.ucdenver.ccp</groupId>
-    <version>0.2-SNAPSHOT</version>
-  </parent>
-  <groupId>edu.ucdenver.ccp</groupId>
-  <artifactId>datasource-fileparsers</artifactId>
-  <version>0.2-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>datasource</artifactId>
+		<groupId>edu.ucdenver.ccp</groupId>
+		<version>0.2-SNAPSHOT</version>
+	</parent>
+	<artifactId>datasource-fileparsers</artifactId>
+
+	<dependencies>
+		<dependency>
+			<groupId>edu.ucdenver.ccp</groupId>
+			<artifactId>common</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>edu.ucdenver.ccp</groupId>
+			<artifactId>datasource-identifiers</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>edu.ucdenver.ccp</groupId>
+			<artifactId>common</artifactId>
+			<type>test-jar</type>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.geneontology</groupId>
+			<artifactId>oboedit</artifactId>
+			<version>1.101</version>
+		</dependency>
+		<dependency>
+			<groupId>org.geneontology</groupId>
+			<artifactId>org.geneontology</artifactId>
+			<version>1.101</version>
+		</dependency>
+	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>bionlp-sourceforge</id>
+			<url>http://bionlp.svn.sourceforge.net/viewvc/bionlp/repo/</url>
+		</repository>
+		<repository>
+			<id>ebi-repo</id>
+			<name>The EBI internal repository</name>
+			<url>http://www.ebi.ac.uk/~maven/m2repo</url>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
 </project>
