--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<!-- This property is inherited by all sub-modules and used to define their 
+			version -->
+		<project.version>0.2-SNAPSHOT</project.version>
 	</properties>
 
 	<build>
@@ -30,19 +33,14 @@
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>1.3</version>
 			</dependency>
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.0-SNAPSHOT</version>
+				<version>1.3</version>
 				<type>test-jar</type>
 				<scope>test</scope>
-			</dependency>
-			<dependency>
-				<groupId>edu.ucdenver.ccp</groupId>
-				<artifactId>fileparsers</artifactId>
-				<version>1.0-SNAPSHOT</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
@@ -58,7 +56,15 @@
 		</dependencies>
 	</dependencyManagement>
 
+	<repositories>
+		<repository>
+			<id>bionlp-sourceforge</id>
+			<url>http://bionlp.svn.sourceforge.net/viewvc/bionlp/repo/</url>
+		</repository>
+	</repositories>
+
 	<modules>
 		<module>datasource-identifiers</module>
+		<module>datasource-fileparsers</module>
 	</modules>
 </project>
