--- a/datasource-identifiers/pom.xml
+++ b/datasource-identifiers/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>datasource</artifactId>
 		<groupId>edu.ucdenver.ccp</groupId>
-		<version>0.4-SNAPSHOT</version>
+		<version>0.5-SNAPSHOT</version>
 	</parent>
 	<artifactId>datasource-identifiers</artifactId>
 
@@ -30,6 +30,13 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
+
+	<repositories>
+		<repository>
+			<id>bionlp-sourceforge</id>
+			<url>http://svn.code.sf.net/p/bionlp/code/repo/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
