--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,14 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.ucdenver.ccp</groupId>
 	<artifactId>datasource</artifactId>
-	<version>0.4-SNAPSHOT</version>
+	<version>0.5-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- This property is inherited by all sub-modules and used to define their 
 			version -->
-		<project.version>0.4-SNAPSHOT</project.version>
+		<project.version>0.5-SNAPSHOT</project.version>
 	</properties>
 
 
@@ -20,12 +20,12 @@
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.4-SNAPSHOT</version>
+				<version>1.4</version>
 			</dependency>
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.4-SNAPSHOT</version>
+				<version>1.4</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
@@ -46,7 +46,7 @@
 	<repositories>
 		<repository>
 			<id>bionlp-sourceforge</id>
-			<url>http://bionlp.svn.sourceforge.net/viewvc/bionlp/repo/</url>
+			<url>http://svn.code.sf.net/p/bionlp/code/repo/</url>
 		</repository>
 	</repositories>
 
