added the datasource-rdfizer module (to be filled from the rdfizer project)

--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 	<modules>
 		<module>datasource-identifiers</module>
 		<module>datasource-fileparsers</module>
+		<module>datasource-rdfizer</module>
 	</modules>
 
 	<build>
