--- a/datasource-rdfizer/pom.xml
+++ b/datasource-rdfizer/pom.xml
@@ -26,7 +26,7 @@
 		<dependency>
 			<groupId>edu.ucdenver.ccp</groupId>
 			<artifactId>datasource-fileparsers</artifactId>
-			<version>0.5-SNAPSHOT</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
