--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 			<dependency>
 				<groupId>org.projectlombok</groupId>
 				<artifactId>lombok</artifactId>
-				<version>0.11.6</version>
+				<version>1.16.6</version>
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
@@ -69,8 +69,8 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.1</version>
 					<configuration>
-						<source>1.7</source>
-						<target>1.7</target>
+						<source>1.8</source>
+						<target>1.8</target>
 					</configuration>
 				</plugin>
 				<!-- create a source jar file -->
@@ -92,12 +92,13 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-javadoc-plugin</artifactId>
-					<version>2.8</version>
+					<version>2.10.3</version>
 					<configuration>
+						<failOnError>false</failOnError>
 						<notimestamp>true</notimestamp>
 						<linksource>true</linksource>
 						<links>
-							<link>http://download.oracle.com/javase/6/docs/api/</link>
+							<link>http://docs.oracle.com/javase/8/docs/api/</link>
 							<link>http://junit.sourceforge.net/javadoc/</link>
 						</links>
 					</configuration>
@@ -129,7 +130,8 @@
 						<encoding>UTF-8</encoding>
 						<inceptionYear>2012</inceptionYear>
 						<organizationName>Regents of the University of Colorado</organizationName>
-						<projectName>Colorado Computational Pharmacology's common module</projectName>
+						<projectName>Colorado Computational Pharmacology's datasource
+							project</projectName>
 						<licenseName>bsd_3</licenseName>
 					</configuration>
 					<executions>
