--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,20 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>edu.ucdenver.ccp</groupId>
-				<artifactId>common</artifactId>
-				<version>1.5</version>
+				<groupId>org.projectlombok</groupId>
+				<artifactId>lombok</artifactId>
+				<version>1.16.6</version>
+				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.5</version>
+				<version>1.5.1</version>
+			</dependency>
+			<dependency>
+				<groupId>edu.ucdenver.ccp</groupId>
+				<artifactId>common</artifactId>
+				<version>1.5.1</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
@@ -31,12 +37,6 @@
 				<groupId>commons-lang</groupId>
 				<artifactId>commons-lang</artifactId>
 				<version>2.6</version>
-			</dependency>
-			<dependency>
-				<groupId>org.projectlombok</groupId>
-				<artifactId>lombok</artifactId>
-				<version>1.16.6</version>
-				<scope>provided</scope>
 			</dependency>
 			<dependency>
 				<groupId>junit</groupId>
@@ -61,6 +61,39 @@
 	</modules>
 
 	<build>
+		<plugins>
+			<plugin>
+				<groupId>external.atlassian.jgitflow</groupId>
+				<artifactId>jgitflow-maven-plugin</artifactId>
+				<version>1.0-m5.1</version>
+				<configuration>
+					<!-- Enable this to push to origin using SSH keys -->
+					<enableSshAgent>false</enableSshAgent>
+					<!-- Keep your maven submodules at the same version as the parent POM -->
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<!-- Pusing in-development features to origin allows all devs to see 
+						what each other are working on -->
+					<pushFeatures>false</pushFeatures>
+					<!-- This allows the CI server (e.g. Jenkins) to automatically push 
+						new releases to origin; you can then either manually deploy them or, if you 
+						are doing Continuous Deployments, auto-deploy them to prod -->
+					<pushReleases>false</pushReleases>
+					<!-- Hot Fixes should be pushed to origin as well so that any dev can 
+						pick them up -->
+					<pushHotfixes>false</pushHotfixes>
+					<!-- Prevents deployments from dev workstations so that they can be 
+						done by a CI server -->
+					<noDeploy>true</noDeploy>
+					<flowInitContext>
+						<!-- You can customize your development branch name. Why? Because it's 
+							faster to type 'git push origin dvlp' than 'git push origin develop' ;-) -->
+						<developBranchName>development</developBranchName>
+						<!-- You can also customize your tag prefixes -->
+						<versionTagPrefix>rev-</versionTagPrefix>
+					</flowInitContext>
+				</configuration>
+			</plugin>
+		</plugins>
 		<pluginManagement>
 			<plugins>
 				<!-- specify the java version -->
