--- a/datasource-identifiers/pom.xml
+++ b/datasource-identifiers/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<artifactId>datasource</artifactId>
 		<groupId>edu.ucdenver.ccp</groupId>
-		<version>0.6</version>
+		<version>0.7-SNAPSHOT</version>
 	</parent>
 	<artifactId>datasource-identifiers</artifactId>
 
