--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.ucdenver.ccp</groupId>
 	<artifactId>datasource</artifactId>
@@ -6,10 +10,10 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- This property is inherited by all sub-modules and used to define their 
-			version -->
-		<project.version>0.6-SNAPSHOT</project.version>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <!-- This property is inherited by all sub-modules and used to define
+           their version -->
+      <project.version>0.6</project.version>
 	</properties>
 
 	<dependencyManagement>
