--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.5.2-SNAPSHOT</version>
+				<version>1.5.2</version>
 			</dependency>
 			<dependency>
 				<groupId>edu.ucdenver.ccp</groupId>
 				<artifactId>common</artifactId>
-				<version>1.5.2-SNAPSHOT</version>
+				<version>1.5.2</version>
 				<type>test-jar</type>
 				<scope>test</scope>
 			</dependency>
