Removed aduna maven repo from pom
This is the old openrdf repo. Artifacts are now available in maven
central.

--- a/datasource-rdfizer/pom.xml
+++ b/datasource-rdfizer/pom.xml
@@ -142,8 +142,8 @@
 
 
 
-	<repositories>
-		<!-- this is where OpenRDF / Sesame lives -->
+	<!-- <repositories>
+		this is where OpenRDF / Sesame lives
 		<repository>
 			<releases>
 				<enabled>true</enabled>
@@ -155,7 +155,7 @@
 			<name>Aduna Open Source - Maven releases</name>
 			<url>http://repo.aduna-software.org/maven2/releases</url>
 		</repository>
-	</repositories>
+	</repositories> -->
 
 
 	<build>
