Updated subrecord handling
To prevent unintentional collapse of similar sub records used for
different field values. The field name has been integrated into the
hash to prevent collapse.

--- a/datasource-rdfizer/pom.xml
+++ b/datasource-rdfizer/pom.xml
@@ -28,6 +28,13 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>edu.ucdenver.ccp</groupId>
+			<artifactId>datasource-fileparsers</artifactId>
+			<version>${project.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
 			<artifactId>sesame-model</artifactId>
 			<version>${ver.sesame}</version>
