--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.ucdenver.ccp</groupId>
 	<artifactId>datasource</artifactId>
-	<version>0.6.3-SNAPSHOT</version>
+	<version>0.7</version>
 	<packaging>pom</packaging>
 
 	<properties>
