--- a/datasource-fileparsers/pom.xml
+++ b/datasource-fileparsers/pom.xml
@@ -41,7 +41,7 @@
 	<repositories>
 		<repository>
 			<id>bionlp-sourceforge</id>
-			<url>http://svn.code.sf.net/p/bionlp/code/repo/</url>
+			<url>https://svn.code.sf.net/p/bionlp/code/repo/</url>
 		</repository>
 		<repository>
 			<!-- repository for OWLTools -->
