Add orphanet file parser

--- a/datasource-fileparsers/pom.xml
+++ b/datasource-fileparsers/pom.xml
@@ -1,11 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<artifactId>datasource</artifactId>
 		<groupId>edu.ucdenver.ccp</groupId>
 		<version>0.7.3</version>
+		<version>0.7.4</version>
 	</parent>
 	<artifactId>datasource-fileparsers</artifactId>
+
+
 
 	<dependencies>
 		<dependency>
@@ -120,6 +125,18 @@
 						<configuration>
 							<schemaFiles>interpro.xsd</schemaFiles>
 							<packageName>org.interpro</packageName>
+							<clearOutputDir>false</clearOutputDir>
+						</configuration>
+					</execution>
+					<execution>
+						<phase>generate-sources</phase>
+						<id>orphanet-xjc</id>
+						<goals>
+							<goal>xjc</goal>
+						</goals>
+						<configuration>
+							<schemaFiles>orphanet.xsd</schemaFiles>
+							<packageName>org.orphanet</packageName>
 							<clearOutputDir>false</clearOutputDir>
 						</configuration>
 					</execution>
